--- a/protein_explorer.css
+++ b/protein_explorer.css
@@ -3,27 +3,15 @@
   font-size: 22px;
 }
 
-.select-top-left {
-  border-top:2px solid #000;
-  border-left:2px solid #000;
-}
-
-.select-top-right {
-  border-top:2px solid #000;
-  border-right:2px solid #000;
-}
-
 .select-top {
   border-top:2px solid #000;
 }
 
-.select-bottom-left {
-  border-bottom:2px solid #000;
-  border-left:2px solid #000;
+.select-left {
+    border-left:2px solid #000;
 }
 
-.select-bottom-right {
-  border-bottom:2px solid #000;
+.select-right {
   border-right:2px solid #000;
 }
 
@@ -31,21 +19,12 @@
   border-bottom:2px solid #000;
 }
 
-.character {
-	width: 20px;
+.position_number {
+  font-family: monospace;
+  font-size: 12px;
+  text-align: right;
 }
 
 .outer {
 	float: left;
-}
-
-.line_elem {
-	float: none;
-	width: 100%;
-	height: 60px;
-}
-
-.number {
-	font-size: 12px;
-	text-align: center;
 }
